--- a/www.topmonks.com/src/html/layouts/topmonks.html
+++ b/www.topmonks.com/src/html/layouts/topmonks.html
@@ -1,15 +1,27 @@
-{%- import 'macros/helpers.html' as macros -%}
 <!doctype html>
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# business: http://ogp.me/ns/business#">
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width">
+  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
+  <meta name="format-detection" content="telephone=no">
   <title>{% block title %}{{ language[page].title }}{% endblock %}</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Preload CDN assets -->
   <link rel="preconnect" href="https://ajax.googleapis.com">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="//res.cloudinary.com">
+  <link rel="preconnect" href="//cdnjs.cloudflare.com">
+  <link rel="preconnect" href="//fonts.gstatic.com">
+  <link rel="preconnect" href="//p.typekit.net">
+  <link rel="preconnect" href="//cdn.jsdelivr.net">
+  <link rel="preconnect" href="//www.google-analytics.com">
+  <link rel="preconnect" href="//static.hotjar.com">
+  <link rel="preload" href="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" as="script">
+  <link rel="preload" href="https://use.typekit.net/her1ktw.js" as="script">
+  <link rel="preload" href="https://www.googletagmanager.com/gtm.js?id=GTM-WW7T986" as="script">
 
   <!-- Custom Fonts -->
   <script>WebFontConfig = { typekit: {id: 'her1ktw'}, async: true }</script>
@@ -22,6 +34,17 @@
 
   {% block head %}{% endblock %}
   {% include "shared/app-icons.html" %}
+  <!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-WW7T986');</script>
+  <!-- End Google Tag Manager -->
 </head>
 <body id="page-{{page}}">
 
@@ -93,8 +116,6 @@
         ticking = true;
       }
     });
-
-
   </script>
 </header>
 
