--- a/www.topmonks.com/src/stylesheets/main.scss
+++ b/www.topmonks.com/src/stylesheets/main.scss
@@ -37,34 +37,6 @@ section:target {
   --mdc-layout-grid-margin-desktop: 0;
 }
 
-.tm-logo {
-  display: flex;
-  align-items: center;
-  font-family: futura-pt, sans-serif;
-  font-size: 1.25em;
-  font-weight: 700;
-  line-height: 32px;
-  letter-spacing: -1px;
-  text-decoration: none;
-  text-transform: uppercase;
-  @media screen and (max-width: 480px) {
-    color: #fff;
-    justify-content: flex-end;
-  }
-  @media screen and (min-width: 481px) {
-    font-size: 1.6em;
-    color: var(--tm-secondary);
-    &:hover {
-      color: var(--tm-secondary-dark);
-    }
-  }
-}
-
-.tm-logo .monk {
-  fill: currentColor;
-  padding-right: 6px;
-}
-
 blockquote {
   position: relative;
   margin: 0 0 3em;
@@ -91,6 +63,20 @@ blockquote {
     padding-left: 4px;
   }
 }
+
+.tm-page-header blockquote {
+  font-size: 40px;
+  line-height: 48px;
+  color: #9b9b9b;
+  text-align: center;
+  margin: 68px 0;
+
+  &::before,
+  &::after {
+    content: none;
+  }
+}
+
 .main-info {
   h2 {
     text-align: center;
@@ -256,12 +242,18 @@ blockquote {
   }
 }
 
+.tm-testimonial__picture {
+  border-radius: 50%;
+  filter: grayscale(1.0);
+  width: 180px;
+}
+
 .contact {
   text-align: center;
   padding: 64px 0 100px;
   background: #fff url("/images/bgnd_curve_2.svg") top -5px left calc(
-      50% - 880px
-    ) no-repeat;
+    50% - 880px
+  ) no-repeat;
   @media screen and (min-width: 481px) {
     background-position: top -24px left calc(50% - 750px);
   }
@@ -276,204 +268,79 @@ blockquote {
   }
 }
 
-/*HAMBURGER*/
-
-.tm-hamburger {
-  .tm-hamburger__container {
-    display: inline-block;
-    cursor: pointer;
-    padding: 8px;
-    width: 18px;
-    height: 18px;
-    position: relative;
-  }
-  .tm-hamburger__container::after {
-    content: "menu";
-    color: #9b9b9b;
-    text-transform: uppercase;
-    font-size: 13px;
-    position: absolute;
-    top: 7px;
-    left: 36px;
-  }
-  .tm-hamburger__bar {
-    background-color: #fe664b;
-    width: 20px;
-    height: 2px;
-    position: absolute;
-    top: 16px;
-    transition: transform 0.4s;
-    &:first-of-type {
-      transform: translateY(-6px);
-    }
-    &:last-of-type {
-      transform: translateY(6px);
-    }
-  }
-  .tm-hamburger__container--open {
-    .tm-hamburger__bar:first-of-type {
-      transform: rotate(-45deg);
-    }
-
-    .tm-hamburger__bar:nth-of-type(2) {
-      opacity: 0;
-    }
-
-    .tm-hamburger__bar:last-of-type {
-      transform: rotate(45deg);
-    }
-  }
-}
-
-.tm-app-bar {
-  position: fixed;
-  width: 100vw;
-  z-index: 4;
-  top: 0;
-  transition: all 0.2s;
-  @media screen and (max-width: 480px) {
-    height: 52px;
-    .tm-layout-wrapper {
-      padding: 8px 16px 0 8px;
-    }
-    + main {
-      margin-top: 52px;
-    }
-  }
-  @media screen and (min-width: 481px) {
-    height: 112px;
-    .tm-layout-wrapper {
-      padding: 66px 0 0 16px;
-      transition: padding 0.25s;
-    }
-    + main {
-      margin-top: 112px;
-    }
-  }
-}
-
-.tm-app-bar--sticky {
-  background-color: #fff;
-  box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.2);
-  overflow: hidden;
-  .tm-logo {
-    color: var(--tm-secondary);
-  }
-  @media screen and (min-width: 481px) {
-    height: 72px;
-    .tm-layout-wrapper {
-      padding: 20px 0 0 16px;
-    }
-    + main {
-      margin-top: 72px;
-    }
-    .tm-menu__list a {
-      color: var(--tm-primary);
-    }
-  }
-}
-
-.tm-app-bar--open {
-  color: #fff;
-  .tm-hamburger__container::after {
-    color: rgba(255, 255, 255, 0.5);
-  }
-  .tm-hamburger__bar {
-    background-color: #fff;
-  }
-  .tm-logo {
-    color: #fff;
-  }
-  .tm-menu {
-    transform: translate(-8px, -64px);
-    z-index: -1;
-  }
-}
-
-.tm-menu {
-  @media screen and (max-width: 480px) {
-    width: 100vw;
-    height: 100vh;
-    padding-top: 64px;
-    transform: translate(calc(-100vw - 12px), -64px);
-    position: fixed;
-    z-index: 3;
-    transition: transform 0.3s;
-    overflow: hidden;
-    background-color: var(--tm-secondary);
-    color: #fff;
-
-    .tm-menu__list li {
-      margin: 0 24px;
-    }
-    .tm-menu__list li + li {
-      border-top: 1px solid rgba(255, 255, 255, 0.25);
-    }
-    .tm-menu__list a {
-      display: inline-block;
-      padding: 8px;
-      text-transform: capitalize;
-    }
-  }
-}
-
-.tm-menu__list a {
-  color: #fff;
-}
-
-.tm-menu--horizontal .tm-menu__list {
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-end;
-  margin: 0;
-}
-.tm-menu--horizontal .tm-menu__list a {
-  text-transform: uppercase;
-  font-weight: bold;
-  display: inline-block;
-  padding: 4px 8px;
-}
-.tm-menu--horizontal .tm-menu__list li + li {
-  margin-left: 4px;
-}
-
 #page-topmonks-index {
   @media screen and (max-width: 480px) {
-    background: #fff
-      url("https://res.cloudinary.com/topmonks/image/upload/w_670,dpr_auto,q_auto,f_auto/v1530724292/topmonks.com/bgnd_header.png")
-      no-repeat right calc(50% - 270px) top -40px;
+    background: #fff url("https://res.cloudinary.com/topmonks/image/upload/w_670,dpr_auto,q_auto,f_auto/v1530724292/topmonks.com/bgnd_header.png") no-repeat right calc(50% - 270px) top -40px;
     background-size: 670px auto;
     overflow-x: hidden;
   }
   @media screen and (max-width: 480px) and (-webkit-min-device-pixel-ratio: 2),
-    screen and (max-width: 480px) and (min--moz-device-pixel-ratio: 2),
-    screen and (max-width: 480px) and (-o-min-device-pixel-ratio: 2/1),
-    screen and (max-width: 480px) and (min-device-pixel-ratio: 2),
-    screen and (max-width: 480px) and (min-resolution: 192dpi),
-    screen and (max-width: 480px) and (min-resolution: 2dppx) {
+  screen and (max-width: 480px) and (min--moz-device-pixel-ratio: 2),
+  screen and (max-width: 480px) and (-o-min-device-pixel-ratio: 2/1),
+  screen and (max-width: 480px) and (min-device-pixel-ratio: 2),
+  screen and (max-width: 480px) and (min-resolution: 192dpi),
+  screen and (max-width: 480px) and (min-resolution: 2dppx) {
     background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_670,dpr_2,q_auto,f_auto/v1530724292/topmonks.com/bgnd_header.png");
   }
   @media screen and (min-width: 481px) {
-    background: url("https://res.cloudinary.com/topmonks/image/upload/w_867,dpr_auto,q_auto,f_auto/v1530724292/topmonks.com/bgnd_header.png")
-      no-repeat right calc(50% - 320px) top 0;
+    background: url("https://res.cloudinary.com/topmonks/image/upload/w_867,dpr_auto,q_auto,f_auto/v1530724292/topmonks.com/bgnd_header.png") no-repeat right calc(50% - 320px) top 0;
     background-size: 867px auto;
     overflow-x: hidden;
   }
   @media screen and (min-width: 841px) and (min-device-pixel-ratio: 2),
-    screen and (min-width: 841px) and (min-resolution: 192dpi),
-    screen and (min-width: 841px) and (min-resolution: 2dppx) {
+  screen and (min-width: 841px) and (min-resolution: 192dpi),
+  screen and (min-width: 841px) and (min-resolution: 2dppx) {
     background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_867,dpr_2,q_auto,f_auto/v1530724292/topmonks.com/bgnd_header.png");
+  }
+
+  .tm-logo {
+    @media screen and (min-width: 481px) {
+      font-size: 1.6em;
+      color: var(--tm-secondary);
+      &:hover {
+        color: var(--tm-secondary-dark);
+      }
+    }
+  }
+
+  .tm-app-bar {
+    @media screen and (min-width: 481px) {
+      height: 112px;
+      background-color: transparent;
+      &.tm-app-bar--sticky {
+        background-color: #fff;
+        @media screen and (min-width: 481px) {
+          height: 72px;
+          .tm-layout-wrapper {
+            padding: 20px 0 0 16px;
+          }
+          + main {
+            margin-top: 72px;
+          }
+          .tm-menu__list a {
+            color: var(--tm-primary);
+          }
+        }
+      }
+      .tm-layout-wrapper {
+        padding: 66px 0 0 16px;
+        transition: padding 0.25s;
+      }
+      + main {
+        margin-top: 112px;
+      }
+    }
   }
 }
 
 .cooperation {
   background-image: url("/images/bgnd_product_top.svg"),
-    url("/images/bgnd_curve_1.svg");
+  url("/images/bgnd_curve_1.svg");
   background-repeat: no-repeat, no-repeat;
   background-position: bottom 0 center, bottom -5px left calc(50% - 880px);
   @media screen and (min-width: 481px) {
     background-position: bottom -20px center,
-      bottom -120px left calc(50% - 750px);
+    bottom -120px left calc(50% - 750px);
   }
   p.box--purple {
     background: linear-gradient(to bottom right, #529cfb 0%, #96f 78%);
@@ -484,29 +351,25 @@ blockquote {
   }
   .tm-bgnd-wrapper {
     @media screen and (max-width: 480px) {
-      background: transparent
-        url("https://res.cloudinary.com/topmonks/image/upload/w_334,dpr_auto,q_auto,f_auto/v1530724291/topmonks.com/bgnd_1.png")
-        no-repeat left 0 top 120px;
+      background: transparent url("https://res.cloudinary.com/topmonks/image/upload/w_334,dpr_auto,q_auto,f_auto/v1530724291/topmonks.com/bgnd_1.png") no-repeat left 0 top 120px;
       background-size: 334px auto;
     }
     @media screen and (max-width: 480px) and (-webkit-min-device-pixel-ratio: 2),
-      screen and (max-width: 480px) and (min--moz-device-pixel-ratio: 2),
-      screen and (max-width: 480px) and (-o-min-device-pixel-ratio: 2/1),
-      screen and (max-width: 480px) and (min-device-pixel-ratio: 2),
-      screen and (max-width: 480px) and (min-resolution: 192dpi),
-      screen and (max-width: 480px) and (min-resolution: 2dppx) {
+    screen and (max-width: 480px) and (min--moz-device-pixel-ratio: 2),
+    screen and (max-width: 480px) and (-o-min-device-pixel-ratio: 2/1),
+    screen and (max-width: 480px) and (min-device-pixel-ratio: 2),
+    screen and (max-width: 480px) and (min-resolution: 192dpi),
+    screen and (max-width: 480px) and (min-resolution: 2dppx) {
       background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_334,dpr_2,q_auto,f_auto/v1530724291/topmonks.com/bgnd_1.png");
     }
     @media screen and (min-width: 481px) {
-      background: transparent
-        url("https://res.cloudinary.com/topmonks/image/upload/w_547,dpr_auto,q_auto,f_auto/v1530724291/topmonks.com/bgnd_1.png")
-        no-repeat right calc(50% + 481px) top 140px;
+      background: transparent url("https://res.cloudinary.com/topmonks/image/upload/w_547,dpr_auto,q_auto,f_auto/v1530724291/topmonks.com/bgnd_1.png") no-repeat right calc(50% + 481px) top 140px;
       background-size: 547px auto;
       padding-bottom: 120px;
     }
     @media screen and (min-width: 841px) and (min-device-pixel-ratio: 2),
-      screen and (min-width: 841px) and (min-resolution: 192dpi),
-      screen and (min-width: 841px) and (min-resolution: 2dppx) {
+    screen and (min-width: 841px) and (min-resolution: 192dpi),
+    screen and (min-width: 841px) and (min-resolution: 2dppx) {
       background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_547,dpr_2,q_auto,f_auto/v1530724291/topmonks.com/bgnd_1.png");
     }
   }
@@ -559,16 +422,18 @@ blockquote {
     }
   }
   .customers blockquote {
+    font-size: 1.66em;
     &::before,
     &::after {
-      font-size: 4.444em;
+      font-size: 2.22em;
+      position: relative;
     }
     &::before {
-      left: -12px;
-      top: 14px;
+      left: -8px;
+      top: 16px;
     }
     &::after {
-      bottom: 22px;
+      bottom: -2px;
     }
   }
   .box.box--mobile-only {
