--- a/www.topmonks.com/src/stylesheets/main.scss
+++ b/www.topmonks.com/src/stylesheets/main.scss
@@ -77,6 +77,12 @@ blockquote {
   }
 }
 
+.box--purple {
+  background: linear-gradient(to bottom right, #529cfb 0%, #96f 78%);
+  border-radius: 32px;
+  color: white;
+}
+
 .main-info {
   h2 {
     text-align: center;
@@ -126,16 +132,53 @@ blockquote {
 }
 
 .how-we-work {
+
+  h2 {
+    position: relative;
+    z-index: 10;
+  }
+  h2::before {
+    content: "";
+    display: block;
+    width: 66.666%;
+    height: 150px;
+    border: 1px solid #ccc;
+    border-bottom: none;
+    border-radius: 56px;
+    position: absolute;
+    left: 16.6666%;
+    top: 32px;
+    z-index: -1;
+  }
+  h2::after {
+    content: "";
+    display: block;
+    height: 100px;
+    border: 1px solid #ccc;
+    border-right: none;
+    position: absolute;
+    left: 50%;
+    top: 32px;
+    z-index: -1;
+  }
+
   .box {
     background: #fff url("/images/ic_listen.svg") center top 60px no-repeat;
     background-size: auto 82px;
     padding-top: 160px;
+    z-index: 15;
+    position: relative;
   }
   .box.box--develop {
     background-image: url("/images/ic_develop.svg");
   }
   .box.box--verify {
     background-image: url("/images/ic_verify.svg");
+  }
+
+  .box--purple {
+    font-size: 20px;
+    padding: 4px 16px;
   }
 }
 
@@ -246,6 +289,7 @@ blockquote {
   border-radius: 50%;
   filter: grayscale(1.0);
   width: 180px;
+  border: 2px solid #fff;
 }
 
 .contact {
@@ -341,10 +385,6 @@ blockquote {
   @media screen and (min-width: 481px) {
     background-position: bottom -20px center,
     bottom -120px left calc(50% - 750px);
-  }
-  p.box--purple {
-    background: linear-gradient(to bottom right, #529cfb 0%, #96f 78%);
-    color: white;
   }
   h2 {
     margin-bottom: 260px;
