Meet us page improvements

--- a/www.topmonks.com/src/stylesheets/main.scss
+++ b/www.topmonks.com/src/stylesheets/main.scss
@@ -35,6 +35,8 @@ section:target {
   margin: 0 auto;
   padding: 16px;
   --mdc-layout-grid-margin-desktop: 0;
+  --mdc-layout-grid-margin-tablet: 0;
+  --mdc-layout-grid-margin-phone: 0;
 }
 
 blockquote {
