--- a/www.topmonks.com/src/stylesheets/meet-us.scss
+++ b/www.topmonks.com/src/stylesheets/meet-us.scss
@@ -1,6 +1,31 @@
 
 .tm-meetup {
-  @media (min-width: 48em) {
+  --mdc-layout-grid-gutter-desktop: 0;
+  --mdc-layout-grid-gutter-tablet: 0;
+  --mdc-layout-grid-gutter-phone: 0;
+  --mdc-layout-grid-margin-desktop: 0;
+  --mdc-layout-grid-margin-tablet: 0;
+  --mdc-layout-grid-margin-phone: 0;
+  h3 {
+    text-align: left;
+  }
+  .tm-layout-wrapper {
+    padding: 0;
+  }
+  &.box img {
+    margin: 16px 0;
+  }
+  @media screen and (max-width: 480px) {
+    .tm-meetup__cell {
+      &:first-child {
+        order: 2;
+      }
+      &:last-child {
+        order: 1;
+      }
+    }
+  }
+  @media (min-width: 481px) {
     &:nth-child(even) .tm-meetup__cell {
       &:first-child {
         order: 2;
@@ -9,5 +34,10 @@
         order: 1;
       }
     }
+  }
+}
+.tm-meetup__img {
+  @media screen and (max-width: 480px) {
+    max-width: 100%;
   }
 }
