--- a/www.topmonks.com/src/stylesheets/header.scss
+++ b/www.topmonks.com/src/stylesheets/header.scss
@@ -160,8 +160,9 @@
       border-top: 1px solid rgba(255, 255, 255, 0.25);
     }
     .tm-menu__list a {
-      display: inline-block;
-      padding: 8px;
+      display: block;
+      padding: 12px;
+      margin: 4px;
       text-transform: capitalize;
     }
   }
