--- a/www.topmonks.com/src/stylesheets/main.scss
+++ b/www.topmonks.com/src/stylesheets/main.scss
@@ -139,7 +139,6 @@ blockquote {
 }
 
 .how-we-work {
-
   h2 {
     position: relative;
     z-index: 10;
@@ -300,7 +299,7 @@ blockquote {
 
 .tm-testimonial__picture {
   border-radius: 50%;
-  filter: grayscale(1.0);
+  filter: grayscale(1);
   width: 180px;
   border: 2px solid #fff;
 }
@@ -309,8 +308,8 @@ blockquote {
   text-align: center;
   padding: 64px 0 100px;
   background: #fff url("/images/bgnd_curve_2.svg") top -5px left calc(
-    50% - 880px
-  ) no-repeat;
+      50% - 880px
+    ) no-repeat;
   @media screen and (min-width: 481px) {
     background-position: top -24px left calc(50% - 750px);
   }
@@ -327,26 +326,29 @@ blockquote {
 
 #page-topmonks-index {
   @media screen and (max-width: 480px) {
-    background: #fff url("https://res.cloudinary.com/topmonks/image/upload/w_670,dpr_auto,q_auto,f_auto/v1530724292/topmonks.com/bgnd_header.png") no-repeat right calc(50% - 270px) top -40px;
+    background: #fff
+      url("https://res.cloudinary.com/topmonks/image/upload/w_670,dpr_auto,q_auto,f_auto/v1530724292/topmonks.com/bgnd_header.png")
+      no-repeat right calc(50% - 270px) top -40px;
     background-size: 670px auto;
     overflow-x: hidden;
   }
   @media screen and (max-width: 480px) and (-webkit-min-device-pixel-ratio: 2),
-  screen and (max-width: 480px) and (min--moz-device-pixel-ratio: 2),
-  screen and (max-width: 480px) and (-o-min-device-pixel-ratio: 2/1),
-  screen and (max-width: 480px) and (min-device-pixel-ratio: 2),
-  screen and (max-width: 480px) and (min-resolution: 192dpi),
-  screen and (max-width: 480px) and (min-resolution: 2dppx) {
+    screen and (max-width: 480px) and (min--moz-device-pixel-ratio: 2),
+    screen and (max-width: 480px) and (-o-min-device-pixel-ratio: 2/1),
+    screen and (max-width: 480px) and (min-device-pixel-ratio: 2),
+    screen and (max-width: 480px) and (min-resolution: 192dpi),
+    screen and (max-width: 480px) and (min-resolution: 2dppx) {
     background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_670,dpr_2,q_auto,f_auto/v1530724292/topmonks.com/bgnd_header.png");
   }
   @media screen and (min-width: 481px) {
-    background: url("https://res.cloudinary.com/topmonks/image/upload/w_867,dpr_auto,q_auto,f_auto/v1530724292/topmonks.com/bgnd_header.png") no-repeat right calc(50% - 320px) top 0;
+    background: url("https://res.cloudinary.com/topmonks/image/upload/w_867,dpr_auto,q_auto,f_auto/v1530724292/topmonks.com/bgnd_header.png")
+      no-repeat right calc(50% - 320px) top 0;
     background-size: 867px auto;
     overflow-x: hidden;
   }
   @media screen and (min-width: 841px) and (min-device-pixel-ratio: 2),
-  screen and (min-width: 841px) and (min-resolution: 192dpi),
-  screen and (min-width: 841px) and (min-resolution: 2dppx) {
+    screen and (min-width: 841px) and (min-resolution: 192dpi),
+    screen and (min-width: 841px) and (min-resolution: 2dppx) {
     background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_867,dpr_2,q_auto,f_auto/v1530724292/topmonks.com/bgnd_header.png");
   }
 
@@ -401,37 +403,41 @@ blockquote {
 
 .cooperation {
   background-image: url("/images/bgnd_product_top.svg"),
-  url("/images/bgnd_curve_1.svg");
+    url("/images/bgnd_curve_1.svg");
   background-repeat: no-repeat, no-repeat;
   background-position: bottom 0 center, bottom -5px left calc(50% - 880px);
   @media screen and (min-width: 481px) {
     background-position: bottom -20px center,
-    bottom -120px left calc(50% - 750px);
+      bottom -120px left calc(50% - 750px);
   }
   h2 {
     margin-bottom: 260px;
   }
   .tm-bgnd-wrapper {
     @media screen and (max-width: 480px) {
-      background: transparent url("https://res.cloudinary.com/topmonks/image/upload/w_334,dpr_auto,q_auto,f_auto/v1530724291/topmonks.com/bgnd_1.png") no-repeat left 0 top 120px;
+      background: transparent
+        url("https://res.cloudinary.com/topmonks/image/upload/w_334,dpr_auto,q_auto,f_auto/v1530724291/topmonks.com/bgnd_1.png")
+        no-repeat left 0 top 120px;
       background-size: 334px auto;
     }
     @media screen and (max-width: 480px) and (-webkit-min-device-pixel-ratio: 2),
-    screen and (max-width: 480px) and (min--moz-device-pixel-ratio: 2),
-    screen and (max-width: 480px) and (-o-min-device-pixel-ratio: 2/1),
-    screen and (max-width: 480px) and (min-device-pixel-ratio: 2),
-    screen and (max-width: 480px) and (min-resolution: 192dpi),
-    screen and (max-width: 480px) and (min-resolution: 2dppx) {
+      screen and (max-width: 480px) and (min--moz-device-pixel-ratio: 2),
+      screen and (max-width: 480px) and (-o-min-device-pixel-ratio: 2/1),
+      screen and (max-width: 480px) and (min-device-pixel-ratio: 2),
+      screen and (max-width: 480px) and (min-resolution: 192dpi),
+      screen and (max-width: 480px) and (min-resolution: 2dppx) {
       background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_334,dpr_2,q_auto,f_auto/v1530724291/topmonks.com/bgnd_1.png");
     }
     @media screen and (min-width: 481px) {
-      background: transparent url("https://res.cloudinary.com/topmonks/image/upload/w_547,dpr_auto,q_auto,f_auto/v1530724291/topmonks.com/bgnd_1.png") no-repeat right calc(50% + 481px) top 140px;
+      background: transparent
+        url("https://res.cloudinary.com/topmonks/image/upload/w_547,dpr_auto,q_auto,f_auto/v1530724291/topmonks.com/bgnd_1.png")
+        no-repeat right calc(50% + 481px) top 140px;
       background-size: 547px auto;
       padding-bottom: 120px;
     }
     @media screen and (min-width: 841px) and (min-device-pixel-ratio: 2),
-    screen and (min-width: 841px) and (min-resolution: 192dpi),
-    screen and (min-width: 841px) and (min-resolution: 2dppx) {
+      screen and (min-width: 841px) and (min-resolution: 192dpi),
+      screen and (min-width: 841px) and (min-resolution: 2dppx) {
       background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_547,dpr_2,q_auto,f_auto/v1530724291/topmonks.com/bgnd_1.png");
     }
   }
