--- a/www.topmonks.com/src/stylesheets/footer.scss
+++ b/www.topmonks.com/src/stylesheets/footer.scss
@@ -39,7 +39,8 @@
   display: inline-block;
 }
 .social-buttons a {
-  line-height: 32px;
+  display: inline-block;
+  height: 32px;
   margin: 0;
-  padding: 10px 12px 0;
+  padding: 4px 12px 0;
 }
