--- a/www.topmonks.com/src/stylesheets/header.scss
+++ b/www.topmonks.com/src/stylesheets/header.scss
@@ -99,7 +99,6 @@
 .tm-app-bar--sticky {
   background-color: #fff;
   box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.2);
-  overflow: hidden;
   .tm-logo {
     color: var(--tm-secondary);
   }
@@ -107,7 +106,7 @@
     background-color: var(--tm-primary);
   }
   .tm-hamburger .tm-hamburger__container::after {
-    color: #9b9b9b;
+    color: rgba(0, 0, 0, 0.25);
   }
   @media screen and (min-width: 481px) {
     height: 72px;
@@ -123,7 +122,7 @@
   }
 }
 
-.tm-app-bar--open {
+.tm-app-bar.tm-app-bar--open {
   color: #fff;
   .tm-hamburger__container::after {
     color: rgba(255, 255, 255, 0.5);
