--- a/www.topmonks.com/src/stylesheets/main.scss
+++ b/www.topmonks.com/src/stylesheets/main.scss
@@ -415,6 +415,15 @@ blockquote {
     }
   }
 
+  .tm-hamburger {
+    .tm-hamburger__container::after {
+      color: rgba(0, 0, 0, 0.25);
+    }
+    .tm-hamburger__bar {
+      background-color: var(--tm-primary);
+    }
+  }
+
   .tm-app-bar {
     background-color: transparent;
     @media screen and (max-width: 480px) {
