--- a/www.topmonks.com/src/stylesheets/main.scss
+++ b/www.topmonks.com/src/stylesheets/main.scss
@@ -253,7 +253,6 @@ blockquote {
       padding-right: 0;
     }
     .steps__step {
-      font-family: Lato, sans-serif;
       &:nth-child(odd) {
         padding-left: 85px;
         padding-right: 24px;
@@ -361,10 +360,10 @@ blockquote {
   text-align: center;
   padding: 64px 0 100px;
   background: #fff url("/images/bgnd_curve_2.svg") top -5px left calc(
-      50% - 880px
+      50% - 530px
     ) no-repeat;
   @media screen and (min-width: 481px) {
-    background-position: top -24px left calc(50% - 750px);
+    background-position: top -24px left calc(50% - 370px);
   }
   .contact_title p {
     color: var(--tm-black);
@@ -380,9 +379,9 @@ blockquote {
 #page-topmonks-index {
   @media screen and (max-width: 480px) {
     background: #fff
-      url("https://res.cloudinary.com/topmonks/image/upload/w_670,dpr_auto,q_auto,f_auto/v1530724292/topmonks.com/bgnd_header.png")
+      url("https://res.cloudinary.com/topmonks/image/upload/w_786,dpr_auto,q_auto,f_auto/v1531476719/topmonks.com/bgnd_header.png")
       no-repeat right calc(50% - 270px) top -40px;
-    background-size: 670px auto;
+    background-size: 786px auto;
     overflow-x: hidden;
   }
   @media screen and (max-width: 480px) and (-webkit-min-device-pixel-ratio: 2),
@@ -391,18 +390,18 @@ blockquote {
     screen and (max-width: 480px) and (min-device-pixel-ratio: 2),
     screen and (max-width: 480px) and (min-resolution: 192dpi),
     screen and (max-width: 480px) and (min-resolution: 2dppx) {
-    background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_670,dpr_2,q_auto,f_auto/v1530724292/topmonks.com/bgnd_header.png");
+    background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_786,dpr_2,q_auto,f_auto/v1531476719/topmonks.com/bgnd_header.png");
   }
   @media screen and (min-width: 481px) {
-    background: url("https://res.cloudinary.com/topmonks/image/upload/w_867,dpr_auto,q_auto,f_auto/v1530724292/topmonks.com/bgnd_header.png")
-      no-repeat right calc(50% - 320px) top 0;
-    background-size: 867px auto;
+    background: url("https://res.cloudinary.com/topmonks/image/upload/w_1017,dpr_auto,q_auto,f_auto/v1531476719/topmonks.com/bgnd_header.png")
+      no-repeat right calc(50% - 320px) top -1px;
+    background-size: 1017px auto;
     overflow-x: hidden;
   }
   @media screen and (min-width: 841px) and (min-device-pixel-ratio: 2),
     screen and (min-width: 841px) and (min-resolution: 192dpi),
     screen and (min-width: 841px) and (min-resolution: 2dppx) {
-    background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_867,dpr_2,q_auto,f_auto/v1530724292/topmonks.com/bgnd_header.png");
+    background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_1017,dpr_2,q_auto,f_auto/v1531476719/topmonks.com/bgnd_header.png");
   }
 
   .tm-logo {
@@ -473,10 +472,10 @@ blockquote {
   background-image: url("/images/bgnd_product_top.svg"),
     url("/images/bgnd_curve_1.svg");
   background-repeat: no-repeat, no-repeat;
-  background-position: bottom 0 left -800px, bottom -5px left calc(50% - 880px);
+  background-position: bottom 0 left -800px, bottom -5px left calc(50% - 530px);
   @media screen and (min-width: 481px) {
     background-position: bottom -20px center,
-      bottom -120px left calc(50% - 750px);
+      bottom -120px left calc(50% - 400px);
   }
   h2 {
     margin-bottom: 260px;
@@ -484,9 +483,9 @@ blockquote {
   .tm-bgnd-wrapper {
     @media screen and (max-width: 480px) {
       background: transparent
-        url("https://res.cloudinary.com/topmonks/image/upload/w_334,dpr_auto,q_auto,f_auto/v1530724291/topmonks.com/bgnd_1.png")
-        no-repeat left 0 top 120px;
-      background-size: 334px auto;
+        url("https://res.cloudinary.com/topmonks/image/upload/w_556,dpr_auto,q_auto,f_auto/v1531476719/topmonks.com/bgnd_1.png")
+        no-repeat left -200px top 120px;
+      background-size: 556px auto;
     }
     @media screen and (max-width: 480px) and (-webkit-min-device-pixel-ratio: 2),
       screen and (max-width: 480px) and (min--moz-device-pixel-ratio: 2),
@@ -494,19 +493,19 @@ blockquote {
       screen and (max-width: 480px) and (min-device-pixel-ratio: 2),
       screen and (max-width: 480px) and (min-resolution: 192dpi),
       screen and (max-width: 480px) and (min-resolution: 2dppx) {
-      background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_334,dpr_2,q_auto,f_auto/v1530724291/topmonks.com/bgnd_1.png");
+      background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_556,dpr_2,q_auto,f_auto/v1531476719/topmonks.com/bgnd_1.png");
     }
     @media screen and (min-width: 481px) {
       background: transparent
-        url("https://res.cloudinary.com/topmonks/image/upload/w_547,dpr_auto,q_auto,f_auto/v1530724291/topmonks.com/bgnd_1.png")
-        no-repeat right calc(50% + 481px) top 140px;
-      background-size: 547px auto;
+        url("https://res.cloudinary.com/topmonks/image/upload/w_911,dpr_auto,q_auto,f_auto/v1531476719/topmonks.com/bgnd_1.png")
+        no-repeat right calc(50% + 600px) top 140px;
+      background-size: 810px auto;
       padding-bottom: 120px;
     }
     @media screen and (min-width: 841px) and (min-device-pixel-ratio: 2),
       screen and (min-width: 841px) and (min-resolution: 192dpi),
       screen and (min-width: 841px) and (min-resolution: 2dppx) {
-      background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_547,dpr_2,q_auto,f_auto/v1530724291/topmonks.com/bgnd_1.png");
+      background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_547,dpr_2,q_auto,f_auto/v1531476719/topmonks.com/bgnd_1.png");
     }
   }
 }
