--- a/www.topmonks.com/src/stylesheets/meet-us.scss
+++ b/www.topmonks.com/src/stylesheets/meet-us.scss
@@ -1,4 +1,3 @@
-
 .tm-meetup {
   --mdc-layout-grid-gutter-desktop: 0;
   --mdc-layout-grid-gutter-tablet: 0;
@@ -13,9 +12,9 @@
     padding: 0;
   }
   &.box img {
-    margin: 16px 0;
+    margin: 16px auto;
   }
-  @media screen and (max-width: 480px) {
+  @media screen and (max-width: 840px) {
     .tm-meetup__cell {
       &:first-child {
         order: 2;
@@ -25,7 +24,7 @@
       }
     }
   }
-  @media (min-width: 481px) {
+  @media (min-width: 841px) {
     &:nth-child(even) .tm-meetup__cell {
       &:first-child {
         order: 2;
@@ -36,8 +35,12 @@
     }
   }
 }
-.tm-meetup__img {
-  @media screen and (max-width: 480px) {
+@media screen and (max-width: 840px) {
+  .tm-meetup__img {
     max-width: 100%;
+  }
+  .img-link {
+    display: block;
+    text-align: center;
   }
 }
