--- a/www.topmonks.com/src/stylesheets/footer.scss
+++ b/www.topmonks.com/src/stylesheets/footer.scss
@@ -38,6 +38,10 @@
   display: inline-block;
   height: 32px;
   margin: 0;
+  &:first-child,
+  &:last-child {
+    padding: 4px 6px 0;
+  }
   @media screen and (max-width: 339px) {
     padding: 4px 8px 0;
   }
